JEWAINDWRK-10 Completed Student Information System

--- a/MVC-SIS/MVC_SIS/MVC_SIS.csproj
+++ b/MVC-SIS/MVC_SIS/MVC_SIS.csproj
@@ -141,6 +141,8 @@
     <Compile Include="Models\Repositories\MajorRepository.cs" />
     <Compile Include="Models\Repositories\StateRepository.cs" />
     <Compile Include="Models\Repositories\StudentRepository.cs" />
+    <Compile Include="Models\ViewModels\AddStudentViewModel.cs" />
+    <Compile Include="Models\ViewModels\EditStudentViewModel.cs" />
     <Compile Include="Models\ViewModels\StudentVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
