--- a/Cap/Cap.UI/CarDealership.Tests/App.config
+++ b/Cap/Cap.UI/CarDealership.Tests/App.config
@@ -8,7 +8,7 @@
     <add name="DefaultConnection" connectionString="Server=localhost\SQL2017;Database=GuildCars;Uid=sa;Pwd=sqlserver;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="Mode" value="PROD" />
+    <add key="Mode" value="QA" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
