--- a/Cap/Cap.UI/CarDealership.UI/web.config
+++ b/Cap/Cap.UI/CarDealership.UI/web.config
@@ -16,7 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="Mode" value="QA" />
+    <add key="Mode" value="PROD" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
